test/simple/ill-typed/tuple_left.caprice
(* TEST
  include refute;
*)


let x : int * bool = true, true
